day9-11"call-action" overflow fix

--- a/day9-11/day9-11.css
+++ b/day9-11/day9-11.css
@@ -115,6 +115,7 @@ header p{
     position:relative;
     height:800px;
     width:1600px;
+    overflow: hidden;
     background-image: url(../day9-11/images/call-action-bg.png);
 }
 .call-action img{
